--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<h1 style="color: blue">Profile</h1>
 	<h2 style ="text-align:left;">Họ và tên: Lê Cảnh Nhật - MSSV: 22521016</h2>
 	<h2 style ="text-align:left;">THÔNG TIN CÁ NHÂN: </h2>
-	<h3 style ="text-align:left;"> Quê quán : Thừa Thiên Huế </h3>
+	<h3 style ="text-align:left;"> Quê quán : Thành phố Huế </h3>
 	<h3 style ="text-align:left;"> Nghề nghiệp : Sinh viên </h3>
     <h3 style ="text-align:left;"> Ngành học : Khoa học máy tính </h3>
 	<br/><br/><br/>
